--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,115 +1,182 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
 
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@article{MinzTonni:2025,
+    author = "Minz, Christoph and Tonni, Erik",
+    title = "{Modular Hamiltonian of the massive scalar field on the half line: A numerical approach}",
+    abstract = "We study the modular Hamiltonian of an interval for the ground state of a massive free scalar field on the half line with Robin boundary conditions, by employing a numerical method. When the interval is adjacent to the boundary, we find numerical evidence that the modular Hamiltonian is non-local, except for the limiting cases of the massless scalar satisfying either Dirichlet or Neumann boundary conditions. When the interval is separated from the boundary, the numerical analysis indicates that the modular Hamiltonian is non-local for all these boundary conditions and any value of the mass.",
+    arxiv = "2512.04659",
+    eprint = "2512.04659",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    journal = "arXiv preprint",
+    abbr = "arXiv",
+    month = "dec",
+    year = "2025",
+    bibtext_show = "false"
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+
+@inproceedings{Minz:2024b,
+    author = "Minz, Christoph",
+    title = "{Do causal sets have symmetries?}",
+    booktitle = "{17th Marcel Grossmann Meeting}: {On Recent Developments in Theoretical and Experimental General Relativity, Gravitation, and Relativistic Field Theories}",
+    abstract = "Causal sets are locally finite, partially ordered sets (posets), which are considered as discrete models of spacetimes. On the one hand, causal sets corresponding to a spacetime manifold are commonly generated with a random process called sprinkling. This process keeps only a discrete set of points of the manifold and their causal relations (loosing the spacetime symmetries in each sprinkle). On the other hand, the main conjecture of causal set theory is that given an ensemble of causal sets there is a corresponding spacetime manifold and the continuum symmetries of it are like all manifold properties 'reconstructable' from the partial orders of all the causal sets in the ensemble. But most generic finite posets have very few layers ('instances of time') in contrast to sprinkles with many layers in a sufficiently large spacetime region. In a recent project, I investigated the automorphism groups of (finite) posets in order to identify and classify their symmetries systematically. The comparison of local symmetries of generic posets (including Kleitmann-Rothschild orders) with sprinkled causal sets may help us to find those posets that can serve as discrete spacetime models in causal set theory.",
+    arxiv = "2410.02862",
+    eprint = "2410.02862",
+    archivePrefix = "arXiv",
+    primaryClass = "gr-qc",
+    journal = "Int. J. Mod. Phys. D",
+    abbr = "World Scientific: IJMPD",
+    month = "oct",
+    year = "2024",
+    bibtext_show = "false"
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+
+@article{Minz:2024a,
+    author = "Minz, Christoph",
+    title = "{Local symmetries in partially ordered sets}",
+    abstract = "Partially ordered sets (posets) have a universal appearance as an abstract structure in many areas of mathematics. Though, even their explicit enumeration remains unknown in general, and only the counts of all partial orders on sets of up to 16 unlabelled elements have been calculated to date, see sequence A000112 in the OEIS. In this work, we study automorphisms of posets in order to formulate a classification by local symmetries. These symmetries give rise to a division operation on the set of all posets and lead us to the construction of symmetry classes that are easier to characterise and enumerate. Additionally to the enumeration of symmetry classes, I derive polynomial expressions that count certain subsets of posets with a large number of layers (a large height). As an application in physics, I investigate local symmetries (or rather their lack of) in causal sets, which are discrete spacetime models used as a candidate framework for quantum gravity.",
+    arxiv = "2406.14533",
+    eprint = "2406.14533",
+    archivePrefix = "arXiv",
+    primaryClass = "math.CO",
+    journal = "arXiv preprint",
+    abbr = "arXiv",
+    month = "jun",
+    year = "2024",
+    bibtext_show = "false"
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
+
+@article{CadamuroFroebMinz:2024,
+    author = {Cadamuro, Daniela and Fr\"ob, Markus B. and Minz, Christoph},
+    title = "{Modular Hamiltonian for Fermions of Small Mass}",
+    abstract = "We consider the algebra of massive fermions restricted to a diamond in two-dimensional Minkowski spacetime, and in the Minkowski vacuum state. While the massless modular Hamiltonian is known for this setting, the derivation of the massive one is an open problem. We compute the small-mass corrections to the modular Hamiltonian in a perturbative approach, finding some terms which were previously overlooked. Our approach can in principle be extended to all orders in the mass, even though it becomes computationally challenging.",
+    arxiv = "2312.04629",
+    eprint = "2312.04629",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    doi = "10.1007/s00023-024-01508-0",
+    journal = "Ann. Henri Poincare",
+    abbr = "Springer: AHP",
+    month = "dec",
+    year = "2024",
+    bibtex_show = "true",
+    html = "https://link.springer.com/article/10.1007/s00023-024-01508-0"
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+
+@article{HawkinsMinzRejzner:2024,
+    author = "Hawkins, Eli and Minz, Christoph and Rejzner, Kasia",
+    title = "{Quantization, dequantization and distinguished states}",
+    abstract = "Geometric quantization is a natural way to construct quantum models starting from classical data. In this work, we start from a symplectic vector space with an inner product and --- using techniques of geometric quantization --- construct the quantum algebra and equip it with a distinguished state. We compare our result with the construction due to Sorkin --- which starts from the same input data --- and show that our distinguished state coincides with the Sorkin-Johnson state. Sorkin's construction was originally applied to the free scalar field over a causal set (locally finite, partially ordered set). Our perspective suggests a natural generalization to less linear examples, such as an interacting field.",
+    arxiv = "2207.05667",
+    eprint = "2207.05667",
+    archivePrefix = "arXiv",
+    primaryClass = "math-ph",
+    doi = "10.1088/1751-8121/ad7427",
+    journal = "J. Phys. A: Math. Theor.",
+    abbr = "IOP: JPA",
+    volume = "57",
+    number = "39",
+    pages = "395205",
+    month = "sep",
+    year = "2024",
+    bibtex_show = "true",
+    html = "https://iopscience.iop.org/article/10.1088/1751-8121/ad7427"
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+
+@article{BostelmannCadamuroMinz:2023,
+    author = "Bostelmann, Henning and Cadamuro, Daniela and Minz, Christoph",
+    title = "{On the Mass Dependence of the Modular Operator for a Double Cone}",
+    abstract = "We present a numerical approximation scheme for the Tomita-Takesaki modular operator of local subalgebras in linear quantum fields, working at one-particle level. This is applied to the local subspaces for double cones in the vacuum sector of a massive scalar free field in (1 + 1)- and (3 + 1)-dimensional Minkowski spacetime, using a discretization of time-0 data in position space. In the case of a wedge region, one component of the modular generator is well-known to be a mass-independent multiplication operator; our results strongly suggest that for the double cone, the corresponding component is still at least close to a multiplication operator, but that it is dependent on mass and angular momentum.",
+    arxiv = "2209.04681",
+    eprint = "2209.04681",
+    archivePrefix = "arXiv",
+    primaryClass = "math-ph",
+    doi = "10.1007/s00023-023-01311-3",
+    journal = "Ann. Henri Poincare",
+    abbr = "Springer: AHP",
+    volume = "24",
+    number = "9",
+    pages = "3031--3054",
+    month = "may",
+    year = "2023",
+    bibtex_show = "true",
+    code = "https://static-content.springer.com/esm/art%3A10.1007%2Fs00023-023-01311-3/MediaObjects/23_2023_1311_MOESM1_ESM.zip",
+    html = "https://link.springer.com/article/10.1007/s00023-023-01311-3"
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+
+@phdthesis{Minz:2021,
+    author = "Minz, Christoph",
+    title = "{Algebraic Field Theory on Causal Sets: Local Structures and Quantization Methods}",
+    abstract = "I investigate aspects of classical and quantum real scalar field theory on causal sets --- a discrete framework for space and time --- using the algebraic perspective. After reviewing and generalizing necessary notation, I consider different discretizations of the Klein-Gordon field equations to describe the dynamics of a scalar field. I generalize a recently proposed discretization method that uses a preferred past structure (which assigns a specific past element to every element of a causal set) to lattices in Minkowski spacetime of any dimension. With numerical techniques, I analyse criteria to assign a preferred past structure to more general causal sets that are generated via sprinkling --- a Poisson process on a given spacetime manifold. It turns out that there exists a method that is very successful in selecting a preferred past uniquely with high probability (for finite causal sets on Minkowski spacetime). I review quantization methods and algebraic states. For the case of a finite causal set, I show how to construct a symplectic vector space with an inner product. The given structure lets me apply the method of geometric quantization to determine a quantum algebra and define a state, which is the Sorkin-Johnston state --- commonly considered for quantum field theory on causal sets. Additionally, I discuss the relationship of the geometrically constructed quantum algebra to deformation quantization to motivate future applications like a non-perturbative construction of the quantum algebra for interacting field theories via geometric quantization.",
+    school = "University of York, Department of Mathematics, United Kindgom",
+    abbr = "Whiterose",
+    note = "uk.bl.ethos.844269",
+    month = "dec",
+    year = "2021",
+    html = "https://etheses.whiterose.ac.uk/29866"
 }
 
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
+
+@article{FewsterHawkinsMinzRejzner:2021,
+    author = "Fewster, Christopher J. and Hawkins, Eli and Minz, Christoph and Rejzner, Kasia",
+    title = "{Local structure of sprinkled causal sets}",
+    abstract = "We describe numerical and analytical investigations of causal sets sprinkled into spacetime manifolds. The first part of the paper is a numerical study of finite causal sets sprinkled into Alexandrov subsets of Minkowski spacetime of dimensions 1+1, 1+2 and 1+3. In particular we consider the rank 2 past of sprinkled causet events, which is the set of events that are two links to the past. Assigning one of the rank 2 past events as 'preferred past' for each event yields a 'preferred past structure,' which was recently proposed as the basis for a causal set d'Alembertian. We test six criteria for selecting rank 2 past subsets. One criterion performs particularly well at uniquely selecting --- with very high probability --- a preferred past satisfying desirable properties. The second part of the paper concerns (infinite) sprinkled causal sets for general spacetime manifolds. After reviewing the construction of the sprinkling process with the Poisson measure, we consider various specific applications. Among other things, we compute the probability of obtaining a sprinkled causal set of a given isomorphism class by combinatorial means, using a correspondence between causal sets in Alexandrov subsets of 1+1 dimensional Minkowski spacetime and 2D-orders. These methods are also used to compute the expected size of the past infinity as a proportion of the total size of a sprinkled causal set.",
+    arxiv = "2011.02965",
+    eprint = "2011.02965",
+    archivePrefix = "arXiv",
+    primaryClass = "gr-qc",
+    doi = "10.1103/PhysRevD.103.086020",
+    journal = "Phys. Rev. D",
+    abbr = "APS: PRD",
+    volume = "103",
+    number = "8",
+    pages = "086020",
+    month = "aug",
+    year = "2021",
+    bibtex_show = "true",
+    code = "https://github.com/c-minz/diamondsprinkling",
+    html = "https://journals.aps.org/prd/abstract/10.1103/PhysRevD.103.086020"
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+
+@misc{Minz:2020,
+    author = "Minz, Christoph",
+    title = "{causets}",
+    abstract = "This LaTeX package uses TikZ to generate (Hasse) diagrams for causal sets (causets) to be used inline with text or in mathematical expressions. The macros can also be used in the tikzpicture environment to annotate or modify a diagram, as shown with some examples in the documentation.",
+    month = "nov",
+    year = "2020",
+    note = "LaTeX-package to draw causal set (Hasse) diagrams.",
+    abbr = "CTAN",
+    code = "https://github.com/c-minz/LaTeX-causets",
+    bibtex_show = "true",
+    html = "https://ctan.org/pkg/causets"
 }
+
+
+@article{MinzVonBorzeszkowskiChrobokSchellstede:2016,
+    author = "Minz, Christoph and von Borzeszkowski, Horst-Heino and Chrobok, Thoralf and Schellstede, Gerold",
+    title = "{Shock wave polarizations and optical metrics in the Born and the Born-Infeld electrodynamics}",
+    abstract = "We analyze the behavior of shock waves in nonlinear theories of electrodynamics. For this, by use of generalized Hadamard step functions of increasing order, the electromagnetic potential is developed in a series expansion near the shock wave front. This brings about a corresponding expansion of the respective electromagnetic field equations which allows for deriving relations that determine the jump coefficients in the expansion series of the potential. We compute the components of a suitable gauge-normalized version of the jump coefficients given for a prescribed tetrad compatible with the shock front foliation. The solution of the first-order jump relations shows that, in contrast to linear Maxwell's electrodynamics, in general the propagation of shock waves in nonlinear theories is governed by optical metrics and polarization conditions describing the propagation of two differently polarized waves (leading to a possible appearance of birefringence). In detail, shock waves are analyzed in the Born and Born-Infeld theories verifying that the Born-Infeld model exhibits no birefringence and the Born model does. The obtained results are compared to those ones found in literature. New results for the polarization of the two different waves are derived for Born-type electrodynamics.",
+    arxiv = "1411.3163",
+    eprint = "1411.3163",
+    archivePrefix = "arXiv",
+    primaryClass = "math-ph",
+    doi = "10.1016/j.aop.2015.11.005",
+    journal = "Ann. Phys.",
+    abbr = "Elsevier: Ann. Phys.",
+    volume = "364",
+    pages = "248--260",
+    month = "jan",
+    year = "2016",
+    bibtex_show = "true",
+    html = "https://www.sciencedirect.com/science/article/abs/pii/S000349161500408X?via%3Dihub"
+}
+
