--- a/_pages/404.md
+++ b/_pages/404.md
@@ -2,8 +2,13 @@
 layout: page
 permalink: /404.html
 title: "Page not found"
-description: "Looks like there has been a mistake. Nothing exists here."
-redirect: true
+redirect: false
 ---
 
-You will be redirected to the main page within 3 seconds. If not redirected, please go back to the [home page]({{ site.baseurl | prepend: site.url }}).
+The site that you tried to access does not exist or it moved.
+
+Did you mean to
+
+- [go to the start page]({{ site.baseurl | prepend: site.url }})
+- [go to the projects page](/projects/)
+- [go to the online tool 'PrOSET Editor'](/assets/html/proset-editor.html)
