--- a/_bibliography/activities.bib
+++ b/_bibliography/activities.bib
@@ -11,7 +11,7 @@
     eventtitle = "Causal Fermion Systems 2025: New Perspectives in Mathematics and Physics",
     eventdate = "2025-10-06--2025-10-10",
     location = {Universit\"at Regensburg, Regensburg, Germany},
-    abbr = "CFS",
+    abbr = "Conference",
     date = "2025-10-07",
     month = "oct",
     year = "2025",
@@ -31,7 +31,7 @@
     eventtitle = "LQP51",
     eventdate = "2025-09-17--2025-09-19",
     location = {Institut f\"ur Theoretische Physik, Universit\"at Leipzig, Germany},
-    abbr = "LQP",
+    abbr = "Talk",
     date = "2025-09-17",
     month = "sep",
     year = "2025",
@@ -55,7 +55,7 @@
     eventtitle = "King's College London",
     eventdate = "2025-09-15",
     location = {King's College London, UK},
-    abbr = "KCL",
+    abbr = "Seminar",
     date = "2025-09-15",
     month = "sep",
     year = "2025"
@@ -73,7 +73,7 @@
     eventtitle = "Causal Set Seminar",
     eventdate = "2025-05-01",
     location = "online",
-    abbr = "Causal Set Seminar",
+    abbr = "Seminar",
     date = "2025-05-01",
     month = "may",
     year = "2025",
@@ -96,7 +96,7 @@
     eventtitle = "SISSA/ICTP seminar",
     eventdate = "2024-11-19",
     location = "Scuola Internazionale Superiore di Studi Avanzati (SISSA), Italy",
-    abbr = "SISSA",
+    abbr = "Seminar",
     date = "2024-11-19",
     month = "nov",
     year = "2024",
@@ -119,7 +119,7 @@
     eventtitle = "SISSA journal club",
     eventdate = "2024-10-30",
     location = "Scuola Internazionale Superiore di Studi Avanzati (SISSA), Italy",
-    abbr = "SISSA",
+    abbr = "Journal club",
     date = "2024-10-30",
     month = "oct",
     year = "2024",
@@ -141,7 +141,7 @@
     eventtitle = "Seventeenth Marcel Grossmann Meeting",
     eventdate = "2024-07-07--2024-07-12",
     location = "Aurum, the 'Gabriele d'Annunzio' University and ICRANet, Pescara, Italy",
-    abbr = "MG",
+    abbr = "Talk",
     date = "2024-07-12",
     month = "jul",
     year = "2024",
@@ -165,7 +165,7 @@
     eventtitle = "XXI International Congress on Mathematical Physics",
     eventdate = "2024-07-01--2024-07-06",
     location = "Strasbourg, France",
-    abbr = "ICMP",
+    abbr = "Talk",
     date = "2024-07-05",
     month = "jul",
     year = "2024",
@@ -188,7 +188,7 @@
     eventtitle = "DIAS Journal club",
     eventdate = "2024-05-14",
     location = "Dublin Institute for Advanced Studies, Ireland",
-    abbr = "DIAS",
+    abbr = "Journal club",
     date = "2024-05-14",
     month = "may",
     year = "2024",
@@ -210,7 +210,7 @@
     eventtitle = "DIAS Seminar",
     eventdate = "2024-05-09",
     location = "Dublin Institute for Advanced Studies, Ireland",
-    abbr = "DIAS",
+    abbr = "Seminar",
     date = "2024-05-09",
     month = "may",
     year = "2024",
@@ -232,7 +232,7 @@
     eventtitle = "Quantum Gravity @ Raman Research Institute",
     eventdate = "2023-09-04--2023-09-08",
     location = "Raman Research Institute, Bengaluru, India",
-    abbr = "QG@RRI",
+    abbr = "Conference",
     date = "2023-09-04",
     month = "sep",
     year = "2023",
@@ -251,7 +251,7 @@
     eventtitle = "Quantum Gravity 2023",
     eventdate = "2023-07-10--2023-07-14",
     location = "Radboud University Nijmegen, Netherlands",
-    abbr = "Quantum Gravity",
+    abbr = "Talk",
     date = "2023-07-11",
     month = "jul",
     year = "2023",
@@ -277,7 +277,7 @@
     eventtitle = "Quantum Field Theory in Curved Spacetimes, Workshop II",
     eventdate = "2023-05-24--2023-05-26",
     location = "Instituto de Astrof\'isica de Andaluc\'ia, Spain",
-    abbr = "QFTCS Workshop",
+    abbr = "Poster",
     date = "2023-05-24",
     month = "may",
     year = "2023",
@@ -300,7 +300,7 @@
     eventtitle = {DPG Fr\"uhjahrestagung SMuK},
     eventdate = "2023-03-20--2023-03-24",
     location = "Dresden University of Technology, Germany",
-    abbr = "DPG Spring Meeting",
+    abbr = "Talk",
     date = "2023-03-20",
     month = "mar",
     year = "2023",
@@ -324,7 +324,7 @@
     eventtitle = "HEP-GR Seminar",
     eventdate = "2022-05-17",
     location = {Institut f\"ur Theoretische Physik, Leipzig University, Germany},
-    abbr = "ITP Leipzig",
+    abbr = "Seminar",
     date = "2022-05-17",
     month = "may",
     year = "2022",
@@ -347,7 +347,7 @@
     eventtitle = "RRI Seminar",
     eventdate = "2021-05-17",
     location = "online (hosted at the Raman Research Institute, India)",
-    abbr = "RRI Bengaluru",
+    abbr = "Seminar",
     date = "2021-05-17",
     month = "may",
     year = "2021",
@@ -369,7 +369,7 @@
     eventtitle = "The Virtual Causet Meeting",
     eventdate = "2020-08-26--2020-08-28",
     location = "online",
-    abbr = "VCSM",
+    abbr = "Talk",
     date = "2020-08-27",
     month = "aug",
     year = "2020",
@@ -393,7 +393,7 @@
     eventtitle = "Quantum Gravity 2020",
     eventdate = "2020-07-13--2020-07-17",
     location = "online (hosted by the Perimeter Institute for Theoretical Physics, Canada)",
-    abbr = "Quantum Gravity",
+    abbr = "Talk",
     date = "2020-07-13",
     month = "jul",
     year = "2020",
@@ -418,7 +418,7 @@
     eventtitle = "59th North British Mathematical Physics Seminar",
     eventdate = "2020-06-22",
     location = "online",
-    abbr = "NBMP Seminar",
+    abbr = "Seminar",
     date = "2020-06-22",
     month = "jun",
     year = "2020",
@@ -441,7 +441,7 @@
     eventtitle = "Graduate Research Symposium",
     eventdate = "2019-05-07",
     location = "Department of Mathematics, University of York, UK",
-    abbr = "University of York",
+    abbr = "Talk",
     date = "2019-05-07",
     month = "may",
     year = "2019"
@@ -457,7 +457,7 @@
     eventtitle = "Geometrical Methods in Mathematical Physics",
     eventdate = "2017-02",
     location = {Technische Universi\"at Berlin, Germany},
-    abbr = "TU Berlin",
+    abbr = "Seminar",
     date = "2017-02",
     month = "feb",
     year = "2017"
@@ -473,7 +473,7 @@
     eventtitle = "Geometrical Methods in Mathematical Physics",
     eventdate = "2016-07",
     location = {Technische Universi\"at Berlin, Germany},
-    abbr = "TU Berlin",
+    abbr = "Seminar",
     date = "2016-07",
     month = "jul",
     year = "2016"
@@ -491,7 +491,7 @@
     eventtitle = {DPG Fr\"uhjahrestagung},
     eventdate = "2011-03-13--2011-03-18",
     location = "Dresden University of Technology, Germany",
-    abbr = "DPG Spring Meeting",
+    abbr = "Poster",
     date = "2011-03-17",
     month = "mar",
     year = "2011",
