Added some preview pictures and one inspire-hep ID.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -157,7 +157,8 @@
     abbr = "CTAN",
     code = "https://github.com/c-minz/LaTeX-causets",
     bibtex_show = "true",
-    html = "https://ctan.org/pkg/causets"
+    html = "https://ctan.org/pkg/causets",
+    preview = "CTAN_causets_preview.png"
 }
 
 
@@ -177,6 +178,8 @@
     month = "jan",
     year = "2016",
     bibtex_show = "true",
-    html = "https://www.sciencedirect.com/science/article/abs/pii/S000349161500408X?via%3Dihub"
+    html = "https://www.sciencedirect.com/science/article/abs/pii/S000349161500408X?via%3Dihub",
+    preview = "arXiv_1411.3163_preview.png",
+    inspirehep_id = "1327554"
 }
 
