Added previews and inspire-hep IDs for all papers.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -14,7 +14,9 @@
     abbr = "arXiv",
     month = "dec",
     year = "2025",
-    bibtext_show = "false"
+    bibtext_show = "false",
+    preview = "arXiv_2512.04659_preview.png",
+    inspirehep_id = "3089371"
 }
 
 
@@ -31,7 +33,9 @@
     abbr = "World Scientific: IJMPD",
     month = "oct",
     year = "2024",
-    bibtext_show = "false"
+    bibtext_show = "false",
+    preview = "arXiv_2410.02862_preview.png",
+    inspirehep_id = "2837330"
 }
 
 
@@ -47,7 +51,9 @@
     abbr = "arXiv",
     month = "jun",
     year = "2024",
-    bibtext_show = "false"
+    bibtext_show = "false",
+    preview = "arXiv_2406.14533_preview.png",
+    inspirehep_id = "2800598"
 }
 
 
@@ -65,7 +71,9 @@
     month = "dec",
     year = "2024",
     bibtex_show = "true",
-    html = "https://link.springer.com/article/10.1007/s00023-024-01508-0"
+    html = "https://link.springer.com/article/10.1007/s00023-024-01508-0",
+    preview = "arXiv_2312.04629_preview.png",
+    inspirehep_id = "2734057"
 }
 
 
@@ -86,7 +94,9 @@
     month = "sep",
     year = "2024",
     bibtex_show = "true",
-    html = "https://iopscience.iop.org/article/10.1088/1751-8121/ad7427"
+    html = "https://iopscience.iop.org/article/10.1088/1751-8121/ad7427",
+    preview = "arXiv_2207.05667_preview.png",
+    inspirehep_id = "2111085"
 }
 
 
@@ -108,7 +118,9 @@
     year = "2023",
     bibtex_show = "true",
     code = "https://static-content.springer.com/esm/art%3A10.1007%2Fs00023-023-01311-3/MediaObjects/23_2023_1311_MOESM1_ESM.zip",
-    html = "https://link.springer.com/article/10.1007/s00023-023-01311-3"
+    html = "https://link.springer.com/article/10.1007/s00023-023-01311-3",
+    preview = "arXiv_2209.04681_preview.png",
+    inspirehep_id = "2150493"
 }
 
 
@@ -121,7 +133,9 @@
     note = "uk.bl.ethos.844269",
     month = "dec",
     year = "2021",
-    html = "https://etheses.whiterose.ac.uk/29866"
+    html = "https://etheses.whiterose.ac.uk/29866",
+    preview = "whiterose_phdthesis_preview.png",
+    inspirehep_id = "2143968"
 }
 
 
@@ -143,7 +157,9 @@
     year = "2021",
     bibtex_show = "true",
     code = "https://github.com/c-minz/diamondsprinkling",
-    html = "https://journals.aps.org/prd/abstract/10.1103/PhysRevD.103.086020"
+    html = "https://journals.aps.org/prd/abstract/10.1103/PhysRevD.103.086020",
+    preview = "arXiv_2011.02965_preview.png",
+    inspirehep_id = "1828524"
 }
 
 
