Fixed typos in co-authors.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -179,7 +179,7 @@
 
 
 @article{MinzVonBorzeszkowskiChrobokSchellstede:2016,
-    author = "Minz, Christoph and von Borzeszkowski, Horst-Heino and Chrobok, Thoralf and Schellstede, Gerold",
+    author = "Minz, Christoph and {von Borzeszkowski}, Horst-Heino and Chrobok, Thoralf and Schellstede, Gerold",
     title = "{Shock wave polarizations and optical metrics in the Born and the Born-Infeld electrodynamics}",
     abstract = "We analyze the behavior of shock waves in nonlinear theories of electrodynamics. For this, by use of generalized Hadamard step functions of increasing order, the electromagnetic potential is developed in a series expansion near the shock wave front. This brings about a corresponding expansion of the respective electromagnetic field equations which allows for deriving relations that determine the jump coefficients in the expansion series of the potential. We compute the components of a suitable gauge-normalized version of the jump coefficients given for a prescribed tetrad compatible with the shock front foliation. The solution of the first-order jump relations shows that, in contrast to linear Maxwell's electrodynamics, in general the propagation of shock waves in nonlinear theories is governed by optical metrics and polarization conditions describing the propagation of two differently polarized waves (leading to a possible appearance of birefringence). In detail, shock waves are analyzed in the Born and Born-Infeld theories verifying that the Born-Infeld model exhibits no birefringence and the Born model does. The obtained results are compared to those ones found in literature. New results for the polarization of the two different waves are derived for Born-type electrodynamics.",
     arxiv = "1411.3163",
