Show bib for thesis, change venue color for activities.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -133,6 +133,7 @@
     note = "uk.bl.ethos.844269",
     month = "dec",
     year = "2021",
+    bibtex_show = "true",
     html = "https://etheses.whiterose.ac.uk/29866",
     preview = "whiterose_phdthesis_preview.png",
     inspirehep_id = "2143968"
