Move events from CV to activities.

--- a/_bibliography/activities.bib
+++ b/_bibliography/activities.bib
@@ -178,6 +178,23 @@
 }
 
 
+@misc{Event:20240605,
+    author = {Cadamuro, Daniela and Fr\"ob, Markus and Minz, Christoph},
+    title = "{48th LQP Workshop and Detlev-Fest}",
+    contribution = "Scientific coorganization",
+    note = "Organizational assistance: Leonardo Sangaletti and Carmine A. Ferrentino",
+    language = "en",
+    eventtitle = "48th LQP Workshop and Detlev-Fest",
+    eventdate = "2024-06-05--2024-06-08",
+    location = {Institut f\"ur Theoretische Physik, Leipzig University, Germany},
+    abbr = "Event organization",
+    month = "jun",
+    year = "2024",
+    url = "https://www.physik.uni-leipzig.de/\~{}lqp48",
+    website = "https://www.physik.uni-leipzig.de/\~{}lqp48"
+}
+
+
 @unpublished{BostelmannCadamuroFroebMinz:JournalClub:20240514,
     author = {Bostelmann, Henning and Cadamuro, Daniela and Fr\"ob, Markus and Minz, Christoph},
     title = "{Mass dependence of modular operators for double cones}",
@@ -314,6 +331,23 @@
 }
 
 
+@misc{Event:20220912,
+    author = {Cadamuro, Daniela and Fr\"ob, Markus and Minz, Christoph},
+    title = "{Energy conditions in quantum field theory}",
+    contribution = "Scientific coorganization",
+    note = "Organizational assistance: Jan Mandrysch, Leonardo Sangaletti, Karim Shedid",
+    language = "en",
+    eventtitle = "Energy conditions in quantum field theory",
+    eventdate = "2022-09-12--2022-09-16",
+    location = {Institut f\"ur Theoretische Physik, Leipzig University, Germany},
+    abbr = "Event organization",
+    month = "sep",
+    year = "2022",
+    url = "https://www.physik.uni-leipzig.de/\~{}ecqft",
+    website = "https://www.physik.uni-leipzig.de/\~{}ecqft"
+}
+
+
 @unpublished{HawkinsMinzRejzner:Seminar:20220517,
     author = "Hawkins, Eli and Minz, Christoph and Rejzner, Kasia",
     title = "{Quantization and Distinguished States from Dequantization}",
@@ -422,8 +456,8 @@
     date = "2020-06-22",
     month = "jun",
     year = "2020",
-    url = "https://www-users.york.ac.uk/~bv557/NBMPS59.html",
-    html = "https://www-users.york.ac.uk/~bv557/NBMPS59.html",
+    url = "https://www-users.york.ac.uk/\~{}bv557/NBMPS59.html",
+    html = "https://www-users.york.ac.uk/\~{}bv557/NBMPS59.html",
     arxiv = "2011.02965",
     eprint = "2011.02965",
     archivePrefix = "arXiv",
@@ -477,6 +511,20 @@
     date = "2016-07",
     month = "jul",
     year = "2016"
+}
+
+
+@misc{Event:20121120,
+    author = "Global Marshall Plan Initiative --- Lokalgruppe Berlin",
+    title = "{Hochschultage \"Okosoziale Marktwirtschaft \& Nachhaltigkeit}",
+    contribution = "Coorganization",
+    language = "de",
+    eventtitle = {Welt mit Zukunft --- Hochschultage \"Okosoziale Marktwirtschaft & Nachhaltigkeit},
+    eventdate = "2012-11-20--2012-11-21",
+    location = {Technical University of Berlin, Germany},
+    abbr = "Event organization",
+    month = "nov",
+    year = "2012"
 }
 
 
